feat(resources): Update poster and some hateoas movie/posters fixes BREAKING CHANGES
