# internal/handlers/poster.go
@@ -2,6 +2,7 @@ package handlers
 
 import (
 	"fmt"
+	"mime/multipart"
 	"net/http"
 	"os"
 	"path/filepath"
@@ -65,24 +66,16 @@ func UploadMoviePoster(ctx *gin.Context) {
 		return
 	}
 
-	// TODO: posters dirs, move to ceph s3 in future and manage by envVars
-	uploadPath := fmt.Sprintf("%s/%s", cfg.PostersDir, movieUUID.String())
-	err := os.Mkdir(uploadPath, 0644) //0644 7777
-	if err != nil && !os.IsExist(err) {
-		// TODO: Implements in future
-		fmt.Println("error on create poster directory %v", err)
-		return
-	}
-
 	if !IsValidUUID(requestForm.UUID) {
 		responses.SendError(ctx, http.StatusForbidden, "malformed or missing movieId", nil)
 		return
 	}
 	posterUUID := uuid.MustParse(requestForm.UUID)
 
-	posterPath := filepath.Join(uploadPath, posterUUID.String()+filepath.Ext(requestForm.File.Filename))
-	if err := ctx.SaveUploadedFile(requestForm.File, posterPath); err != nil {
+	posterUploadedPath, err := uploadPoster(ctx, movieUUID, posterUUID, requestForm.File)
+	if err != nil {
 		// TODO: Implements in future
+		fmt.Printf("error on posterUploadedPath %v", err)
 		return
 	}
 
@@ -92,7 +85,7 @@ func UploadMoviePoster(ctx *gin.Context) {
 		requestForm.Name,
 		requestForm.File.Header.Get("Content-Type"),
 		requestForm.AlternativeText,
-		posterPath,
+		posterUploadedPath,
 	)
 	if err != nil {
 		// TODO: Implements in future
@@ -104,9 +97,17 @@ func UploadMoviePoster(ctx *gin.Context) {
 		return
 	}
 
+	resultMovie := responses.NewMovie(
+		poster.Movie,
+		cfg.Host,
+		versionURL,
+		nil,
+	)
+
 	result := responses.NewPoster(
 		poster,
 		movie.UUID,
+		resultMovie.Links.Self.HREF,
 		cfg.Host,
 		versionURL,
 		nil,
@@ -119,4 +120,130 @@ func UploadMoviePoster(ctx *gin.Context) {
 		result,
 		responses.HALHeaders,
 	)
+}
+
+// @Summary Update Movie Poster
+// @Description Update Movie Poster
+// @Tags Movies
+// @Router /movies/{movie_id}/posters/{poster_id} [patch]
+// @Param movie_id path string true "Movie UUID"
+// @Param poster_id path string true "Poster UUID"
+// @Accept mpfd
+// @Param request formData requests.UpdatePoster true "Request body for update"
+// @Param file formData file true "binary poster data"
+// @Produce json
+// @Success 200 {object} responses.Poster
+func UpdateMoviePoster(ctx *gin.Context) {
+	cfg := ctx.MustGet("cfg").(config.API)
+	versionURL := fmt.Sprintf("%s/%s", cfg.Host, "v1")
+
+	movieId := ctx.Param("movie_id")
+	posterId := ctx.Param("poster_id")
+
+	if !IsValidUUID(movieId) || !IsValidUUID(posterId) {
+		responses.SendError(ctx, http.StatusForbidden, "malformed or missing UUIDs", nil)
+		return
+	}
+
+	movieUUID := uuid.MustParse(movieId)
+	posterUUID := uuid.MustParse(posterId)
+
+	// TODO: Uggly query, move to model
+	// or find better way:
+	// https://gorm.io/docs/preload.html
+	var existingPoster models.Poster
+	if err := database.DB.
+		Preload("Movie").
+		Joins("INNER JOIN movies ON posters.movie_id = movies.id").
+		Where("posters.uuid = ? AND movies.uuid = ?", posterUUID, movieUUID).
+		Where("posters.deleted_at IS NULL").
+		Order("posters.id").
+		Limit(1).
+		First(&existingPoster).Error; err != nil {
+		// TODO: Implements in future
+		fmt.Printf("existingPoster %v", err)
+		return
+	}
+
+	var updateRequest requests.UpdatePoster
+	if err := ctx.ShouldBindWith(&updateRequest, binding.FormMultipart); err != nil {
+		// TODO: Implements in future
+		fmt.Printf("updateRequest ShouldBindJSON %v", err)
+		responses.SendError(ctx, http.StatusBadRequest, "malformed request formData", nil)
+		return
+	}
+
+	var posterUploadedPath string
+	var err error
+	if updateRequest.File != nil {
+		posterUploadedPath, err = uploadPoster(ctx, movieUUID, posterUUID, updateRequest.File)
+		if err != nil {
+			// TODO: Implements in future
+			fmt.Printf("posterUploadedPath %v", err)
+			return
+		}
+
+		existingPoster.ContentType = updateRequest.File.Header.Get("Content-Type")
+		existingPoster.Path = posterUploadedPath
+	}
+
+	if updateRequest.Name != "" {
+		existingPoster.Name = updateRequest.Name
+	}
+
+	if updateRequest.AlternativeText != "" {
+		existingPoster.AlternativeText = updateRequest.AlternativeText
+	}
+
+	if err := database.DB.Save(&existingPoster).Error; err != nil {
+		// TODO: Implements in future
+		fmt.Printf("database.DB.Save %v", err)
+		return
+	}
+
+	resultMovie := responses.NewMovie(
+		existingPoster.Movie,
+		cfg.Host,
+		versionURL,
+		nil,
+	)
+
+	result := responses.NewPoster(
+		existingPoster,
+		movieUUID,
+		resultMovie.Links.Self.HREF,
+		cfg.Host,
+		versionURL,
+		nil,
+	)
+
+	responses.SendSuccess(
+		ctx,
+		http.StatusOK,
+		"update-movies-poster",
+		result,
+		responses.HALHeaders,
+	)
+}
+
+func uploadPoster(ctx *gin.Context, movieUUID, posterUUID uuid.UUID, file *multipart.FileHeader) (string, error) {
+	cfg := ctx.MustGet("cfg").(config.API)
+
+	// TODO: posters dirs, move to storages local ceph | S3 in future and manage by envVars
+	uploadPath := fmt.Sprintf("%s/%s", cfg.PostersDir, movieUUID.String())
+	err := os.Mkdir(uploadPath, 0644) //0644 7777
+	if err != nil && !os.IsExist(err) {
+		// TODO: Implements in future
+		fmt.Printf("error on create poster directory %v", err)
+		return "", err
+	}
+
+	posterPath := filepath.Join(uploadPath, posterUUID.String()+filepath.Ext(file.Filename))
+	if err := ctx.SaveUploadedFile(file, posterPath); err != nil {
+		// TODO: Implements in future
+		fmt.Printf("error on SaveUploadedFile %v", err)
+		return "", err
+	}
+
+	return posterPath, nil
 }
