# internal/handlers/responses/poster.go
@@ -11,7 +11,6 @@ var MoviePosterContentType = "image/png"
 
 type basePoster struct {
 	UUID            uuid.UUID `json:"uuid"`
-	MovieUUID       uuid.UUID `json:"movieUUID,omitempty"`
 	Name            string    `json:"name"`
 	ContentType     string    `json:"contentType"`
 	AlternativeText string    `json:"alternativeText"`
@@ -28,14 +27,15 @@ type Poster struct {
 
 type HATEOASPosterLinks struct {
 	Self              HATEOASLink `json:"self"`
+	Movie             HATEOASLink `json:"movie"`
 	Image             HATEOASLink `json:"image"`
 	UpdateMoviePoster HATEOASLink `json:"update-movie-poster"`
-	DeleteMoviePoster HATEOASLink `json:"delete-movie-poster"`
 }
 
 func NewPoster(
 	model models.Poster,
 	movieUUID uuid.UUID,
+	movieLink,
 	baseURL,
 	versionURL string,
 	templates interface{},
@@ -43,14 +43,13 @@ func NewPoster(
 	poster := Poster{
 		basePoster: basePoster{
 			UUID:            model.UUID,
-			MovieUUID:       movieUUID,
 			Name:            model.Name,
 			ContentType:     model.ContentType,
 			AlternativeText: model.AlternativeText,
 			Path:            model.Path,
 		},
 
-		Links: NewPosterLinks(movieUUID, model.UUID, baseURL, versionURL, model.Path),
+		Links: NewPosterLinks(movieUUID, model.UUID, movieLink, baseURL, versionURL, model.Path),
 
 		//Templates: templates,
 	}
@@ -61,14 +60,15 @@ func NewPoster(
 func NewPosterLinks(
 	movieUUID,
 	posterUUID uuid.UUID,
+	movieLink,
 	baseURL,
 	versionURL,
 	posterPath string,
 ) HATEOASPosterLinks {
 	return HATEOASPosterLinks{
-		Self:              HATEOASLink{HREF: fmt.Sprintf("%s/movies/%s/posters", baseURL, movieUUID)},
+		Self:              HATEOASLink{HREF: fmt.Sprintf("%s/movies/%s/posters/%s", baseURL, movieUUID, posterUUID)},
+		Movie:             HATEOASLink{HREF: movieLink},
 		UpdateMoviePoster: HATEOASLink{HREF: fmt.Sprintf("%s/movies/%s/posters/%s", baseURL, movieUUID, posterUUID)},
-		DeleteMoviePoster: HATEOASLink{HREF: fmt.Sprintf("%s/movies/%s/posters/%s", baseURL, movieUUID, posterUUID)},
 		Image:             HATEOASLink{HREF: fmt.Sprintf("%s/%s", baseURL, posterPath)},
 	}
 }
