# router/routes.go
@@ -54,34 +54,7 @@ func initializeRoutes(r *gin.Engine, cfg config.API) {
 
 	// Movies
 	v1.POST("/movies/:movie_id/posters", handlers.UploadMoviePoster)
-	v1.OPTIONS("/movies", handlers.Option)
-	v1.HEAD("/movies", handlers.Head)
-
-	v1.GET("/movies", handlers.RetrieveMovieList)
-	v1.GET("/movies/:movie_id", handlers.RetrieveMovie)
-}
-
-func initializeRoutesMovies(r *gin.Engine, cfg config.API) {
-	r.Static("/web", cfg.StaticsDir)
-
-	basePath := "/v1"
-
-	ginSwagger.WrapHandler(swaggerFiles.Handler,
-		ginSwagger.URL(fmt.Sprintf("%s%s", basePath, "/swagger/doc.json")),
-		ginSwagger.DefaultModelsExpandDepth(-1))
-
-	docs.SwaggerInfo.BasePath = basePath
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	v1 := r.Group(basePath)
-
-	v1.Use(middlewares.ConfigInject(cfg))
-	v1.Use(middlewares.CORS())
-
-	v1.GET("/", handlers.RetrieveRootResources)
-
-	// Movies
-	v1.POST("/movies/:movie_id/posters", handlers.UploadMoviePoster)
+	v1.PATCH("/movies/:movie_id/posters/:poster_id", handlers.UpdateMoviePoster)
 	v1.OPTIONS("/movies", handlers.Option)
 	v1.HEAD("/movies", handlers.Head)
 
